syntax = "proto3";

package temporal.server.api.persistence.v1;
option go_package = "go.temporal.io/server/api/persistence/v1;persistence";

import "temporal/server/api/persistence/v1/hsm.proto";
import "temporal/api/common/v1/message.proto";

message ASMInstanceInfo {
    message ASMTask {
        bytes data = 1;
        VersionedTransition versioned_transition = 2;
    }

    temporal.api.common.v1.DataBlob instance_state = 1;
    VersionedTransition initial_versioned_transition = 2;
    VersionedTransition last_update_versioned_transition = 3;
    repeated ASMTask tasks = 4;

    string asm_type = 5;

    // int64 transition_count = 100;
}

// This one is data store in the queue
message ASMTaskInfo {
    temporal.api.common.v1.DataBlob data_blob = 1;
    string sub_asm_id = 2;
    // in case sub asm id is reused
    VersionedTransition initial_versioned_transition = 3; 
    VersionedTransition versioned_transition = 4;
    string root_asm_type = 5;
}
