syntax = "proto3";

package temporal.server.api.persistence.v1;
option go_package = "go.temporal.io/server/api/persistence/v1;persistence";

import "google/protobuf/timestamp.proto";

import "temporal/server/api/persistence/v1/hsm.proto";
import "temporal/api/common/v1/message.proto";

message ChasmNode {
    VersionedTransition last_update_versioned_transition = 1;

    oneof attributes {
        ChasmComponentAttributes component_attributes = 2;
        ChasmDataAttributes data_attributes = 3;
        ChasmCollectionAttributes collection_attributes = 4;
        ChasmPointerAttributes pointer_attributes = 5;
    }
}

message ChasmComponentAttributes {
    message Task {
        string name = 1;
        temporal.api.common.v1.DataBlob blob = 2;
        VersionedTransition versioned_transition = 3;

        string destination = 4;
        google.protobuf.Timestamp scheduled_time = 5;
    }

    string component_name = 1;
    temporal.api.common.v1.DataBlob component_state = 2;
    VersionedTransition initial_versioned_transition = 3;
    repeated Task tasks = 4;
}

message ChasmDataAttributes {
    temporal.api.common.v1.DataBlob blob = 1;
}

message ChasmCollectionAttributes {
    // empty
}

message ChasmPointerAttributes {
    string node_path = 1;
}

// This one is data store in the queue
message ChasmTaskInfo {
    string name = 1;
    temporal.api.common.v1.DataBlob blob = 2;
    string component_path = 3;
    VersionedTransition initial_versioned_transition = 4; 
    VersionedTransition versioned_transition = 5;
}
